# arbhx-opendal

./: Cargo.toml  README.md
src/: config.rs  data.rs  lib.rs  query.rs  reader.rs  util.rs  writer.rs
src/services/: b2.rs  dropbox.rs  ftp.rs  gdrive.rs  mod.rs  onedrive.rs  s3.rs
