[package]
name = "arbhx-opendal"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The Arbhx OpenDAL layer for Rust."
homepage = "https://ericg2.github.io/"
repository = "https://github.com/ericg2/arbhx"
readme = "README.md"
categories = ["filesystem"]
keywords = ["vfs"]

[dependencies]
arbhx-core = "2"
async-trait = "0.1.89"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228" }
tokio-util = { version = "0.7", features = ["compat"] }
opendal = { version = "0.55.0", features = ["services-ftp", "services-b2",  "services-dropbox", "services-gdrive", "services-onedrive", "services-s3", "layers-throttle"] }
futures-lite = { version = "2.6.1" }
serde_derive = "1.0.228"
derive_setters = "0.1.9"
bytesize = { version = "2.3.1", features = ["serde"] }
ignore = "0.4.25"
dashmap = "6.1.0"

[features]
blocking = []